# ros

./: .gitignore  Cargo.toml  Makefile  README.md  flash_usb.sh
.cargo/: config.toml  launch.json
initrfs/: readme
initrfs/directory_test/: subfile.txt
initrfs/usr/scripts/: meminfo.sh  strace.sh  uptime.sh
kernel/: Cargo.toml  linker.ld  x86_64-ros-kernel.json
kernel/src/: kernel_cmds.rs  kglobal.rs  lib.rs  main.rs  serial.rs
kernel/src/arch/: gdt.rs  mod.rs  percpu.rs  ps2.rs  sys_desc.rs
kernel/src/arch/interrupt/: idt.rs  ioapic.rs  lapic.rs  mod.rs  syscall_entry.rs  timer_trap.rs  types.rs
kernel/src/arch/pci/: mod.rs
kernel/src/arch/timer/: pit.rs
kernel/src/console/: console.rs  gop_framebuffer.rs  keyboard.rs  mod.rs  tty.rs
kernel/src/fs/: file_descriptor.rs  mod.rs  procfs.rs  ramfs.rs  vfs.rs
kernel/src/logging/: mod.rs
kernel/src/memory/: bmp_alloc.rs  heap.rs  mod.rs  paging.rs  phys_frame_bump_alloc.rs
kernel/src/proc/: address_space.rs  context.rs  elf.rs  mmap_region.rs  mod.rs  proc_manager.rs  process.rs  sched.rs  signal.rs  task_manager.rs
kernel/src/syscall/: helpers.rs  mod.rs  syscall_dispatch.rs  syscall_impl.rs
kernel/src/utils/: irq_lock.rs  mod.rs  ringbuffer.rs
loader/: Cargo.toml
loader/src/: kernel_load.rs  main.rs  paging.rs
media/: demo.webm
shared/src/: lib.rs
sys/: Cargo.toml
sys/src/: lib.rs
user/: Cargo.toml
user/.cargo/: config.toml
user/src/cat/: main.rs
user/src/init/: main.rs
user/src/ls/: main.rs
user/src/sched_demo/: main.rs  task.rs
user/src/shell/: main.rs  shell.rs
user_rt/: Cargo.toml
user_rt/src/: env.rs  heap.rs  lib.rs
(+8 files in other folders)
